# fluxion

./: AGENTS.md  Cargo.toml  README  opencode.json
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: buffer.rs  cursor.rs  file_picker.rs  lib.rs  mode.rs
crates/tui/: Cargo.toml
crates/tui/src/: keybindings.rs  lib.rs
src/: main.rs
