[package]
name = "fluxion"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
fluxion-core = { version = "0.1.0", path = "../core" }
fluxion-tui = { version = "0.1.0", path = "../tui" }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
